classification
Title: PyState_FindModule false length-comparison fix
Type: behavior Stage: committed/rejected
Components: Interpreter Core Versions: Python 3.3, Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: Robin.Schreiber, jcea, loewis, pitrou, python-dev
Priority: normal Keywords: patch

Created on 2012-08-19 13:16 by Robin.Schreiber, last changed 2012-09-10 08:57 by pitrou. This issue is now closed.

Files
File name Uploaded Description Edit
PyState_FindModule_LE_fix.patch Robin.Schreiber, 2012-08-19 13:16
Messages (6)
msg168572 - (view) Author: Robin Schreiber (Robin.Schreiber) * Date: 2012-08-19 13:16
Fixed wrong list-length comparison in PyState_FindModule.
msg168582 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2012-08-19 16:20
Looks good to me, thank you.
msg168682 - (view) Author: Roundup Robot (python-dev) Date: 2012-08-20 17:38
New changeset b96a4b1e7ecb by Antoine Pitrou in branch '3.2':
Issue #15726: Fix incorrect bounds checking in PyState_FindModule.
http://hg.python.org/cpython/rev/b96a4b1e7ecb

New changeset 7789111afe05 by Antoine Pitrou in branch 'default':
Issue #15726: Fix incorrect bounds checking in PyState_FindModule.
http://hg.python.org/cpython/rev/7789111afe05
msg170151 - (view) Author: Jesús Cea Avión (jcea) * (Python committer) Date: 2012-09-10 02:29
Antoine, you applied a patch, but market this issue as "invalid". What that a mistake?. Should it be "closed"?.
msg170152 - (view) Author: Jesús Cea Avión (jcea) * (Python committer) Date: 2012-09-10 02:30
I meant "fixed".
msg170166 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2012-09-10 08:57
Oops, sorry, that was a mistake.
History
Date User Action Args
2012-09-10 08:57:03pitrousetresolution: invalid -> fixed
messages: + msg170166
2012-09-10 02:30:05jceasetmessages: + msg170152
2012-09-10 02:29:27jceasetnosy: + jcea
messages: + msg170151
2012-08-20 17:39:40pitrousetstatus: open -> closed
resolution: invalid
stage: patch review -> committed/rejected
2012-08-20 17:38:26python-devsetnosy: + python-dev
messages: + msg168682
2012-08-19 16:20:46pitrousetversions: + Python 3.2, Python 3.3, - Python 3.4
nosy: + pitrou

messages: + msg168582

stage: patch review
2012-08-19 13:17:38Robin.Schreibersetnosy: + loewis
2012-08-19 13:16:51Robin.Schreibercreate