Issue #15726: Fix incorrect bounds checking in PyState_FindModule. Patch by Robin Schreiber.